--- a/index.html
+++ b/index.html
@@ -143,37 +143,37 @@
                           <div class="carousel-inner z-depth-1-half" role="listbox">
                               <!--First slide-->
                               <div class="carousel-item active">
-                                  <img class="d-block w-100" src="/img/house/P1060750-1920.JPG" alt="First slide">
+                                  <img class="d-block w-100" src="/img/house/P1060750-1920-1.JPG" alt="First slide">
                               </div>
                               <!--/First slide-->
                               <!--Second slide-->
                               <div class="carousel-item">
-                                  <img class="d-block w-100" src="/img/house/P1060658-1920.JPG" alt="Second slide">
+                                  <img class="d-block w-100" src="/img/house/P1060658-1920-1.JPG" alt="Second slide">
                               </div>
                               <!--/Second slide-->
                               <!--Third slide-->
                               <div class="carousel-item">
-                                  <img class="d-block w-100" src="/img/house/P1060656-1920.JPG" alt="Third slide">
+                                  <img class="d-block w-100" src="/img/house/P1060656-1920-1.JPG" alt="Third slide">
                               </div>
                               <!--/Third slide-->
                               <!--Fourth slide-->
                               <div class="carousel-item">
-                                  <img class="d-block w-100" src="/img/house/P1060633-1920.JPG" alt="Fourth slide">
+                                  <img class="d-block w-100" src="/img/house/P1060633-1920-1.JPG" alt="Fourth slide">
                               </div>
                               <!--/Fourth slide-->
                               <!--Fifth slide-->
                               <div class="carousel-item">
-                                  <img class="d-block w-100" src="/img/house/P1060768ri-1920.JPG" alt="Fifth slide">
+                                  <img class="d-block w-100" src="/img/house/P1060768ri-1920-1.JPG" alt="Fifth slide">
                               </div>
                               <!--/Fifth slide-->
                               <!--Sixth slide-->
                               <div class="carousel-item">
-                                  <img class="d-block w-100" src="/img/house/P1060741-1920.JPG" alt="Sixth slide">
+                                  <img class="d-block w-100" src="/img/house/P1060741-1920-1.JPG" alt="Sixth slide">
                               </div>
                               <!--/Sixth slide-->
                               <!--Seventh slide-->
                               <div class="carousel-item">
-                                  <img class="d-block w-100" src="/img/house/P1060739-1920.JPG" alt="Seventh slide">
+                                  <img class="d-block w-100" src="/img/house/P1060739-1920-1.JPG" alt="Seventh slide">
                               </div>
                               <!--/Seventh slide-->
 
@@ -242,7 +242,7 @@
 
                 <!--Card image-->
                 <div class="view overlay hm-white-slight">
-                    <img src="img/house/P1060750-1920.JPG" class="img-fluid" alt="">
+                    <img src="img/house/P1060750-1920-1.JPG" class="img-fluid" alt="">
                     <a>
                         <div class="mask"></div>
                     </a>
@@ -273,7 +273,7 @@
 
                 <!--Card image-->
                 <div class="view overlay hm-white-slight">
-                    <img src="img/house/P1060633-1920.JPG" class="img-fluid" alt="">
+                    <img src="img/house/P1060633-1920-1.JPG" class="img-fluid" alt="">
                     <a>
                         <div class="mask"></div>
                     </a>
@@ -305,7 +305,7 @@
 
                 <!--Card image-->
                 <div class="view overlay hm-white-slight">
-                    <img src="img/house/P1060656-1920.JPG" class="img-fluid" alt="">
+                    <img src="img/house/P1060656-1920-1.JPG" class="img-fluid" alt="">
                     <a>
                         <div class="mask"></div>
                     </a>
@@ -336,7 +336,7 @@
 
                 <!--Card image-->
                 <div class="view overlay hm-white-slight">
-                    <img src="img/house/P1060658-1920.JPG" class="img-fluid" alt="">
+                    <img src="img/house/P1060658-1920-1.JPG" class="img-fluid" alt="">
                     <a>
                         <div class="mask"></div>
                     </a>
