--- a/privacy.html
+++ b/privacy.html
@@ -32,7 +32,7 @@
 <!--Main Navigation-->
 <header>
 
-    <nav class="navbar navbar-expand-lg navbar-dark indigo fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark default-color-dark fixed-top">
         <div class="container">
         <a class="navbar-brand" href="index.html">Ferienhaus 28<br>Frielendorf</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
