--- a/privacy.html
+++ b/privacy.html
@@ -29,6 +29,10 @@
 <!--Main Navigation-->
 <header>
 
+
+<!--Main Navigation-->
+<header>
+
     <nav class="navbar navbar-expand-lg navbar-dark default-color-dark fixed-top">
         <div class="container">
         <a class="navbar-brand" href="index.html">Ferienhaus 28<br>Frielendorf</a>
@@ -86,6 +90,12 @@
 
 </main>
 <!--Main layout-->
+
+</header>
+<!--Main Navigation-->
+
+</header>
+<!--Main Navigation-->
 
 <!--Footer-->
 <footer>
