--- a/privacy.html
+++ b/privacy.html
@@ -58,12 +58,17 @@
         </div>
         </div>
     </nav>
-
 <!--Mask-->
     <div class="view hm-black-strong">
     <div class="full-bg-img flex-center">
         <ul>
             <li>
+  <!--Main layout-->
+    <main class="text-center">
+        <div class="container">
+
+            <!--Section: privacy-->
+            <section id="privacy" class="text-center">
                 <h1 class="h1-responsive ersterartikel">Datenschutzerklärung</h1>
             </li>
             <li>
@@ -74,12 +79,15 @@
                 <p class="text-warning"><h5>Cookies</h5></p><p class="text-warning"><span class="ts-muster-content">Cookies sind kleine Dateien, die es ermöglichen, auf dem Zugriffsgerät der Nutzer (PC, Smartphone o.ä.) spezifische, auf das Gerät bezogene Informationen zu speichern. Sie dienen zum einem der Benutzerfreundlichkeit von Webseiten und damit den Nutzern (z.B. Speicherung von Logindaten). Zum anderen dienen sie, um die statistische Daten der Webseitennutzung zu erfassen und sie zwecks Verbesserung des Angebotes analysieren zu können. Die Nutzer können auf den Einsatz der Cookies Einfluss nehmen. Die meisten Browser verfügen eine Option mit der das Speichern von Cookies eingeschränkt oder komplett verhindert wird. Allerdings wird darauf hingewiesen, dass die Nutzung und insbesondere der Nutzungskomfort ohne Cookies eingeschränkt werden.Sie können viele Online-Anzeigen-Cookies von Unternehmen über die US-amerikanische  Seite <a href="http://www.aboutads.info/choices/">http://www.aboutads.info/choices/</a> oder die EU-Seite <a href="http://www.youronlinechoices.com/uk/your-ad-choices/ ">http://www.youronlinechoices.com/uk/your-ad-choices/ </a> verwalten.</span></p><br>
                 <p class="text-warning"><h5>Widerruf, Änderungen, Berichtigungen und Aktualisierungen</h5></p><p class="text-warning">Der Nutzer hat das Recht, auf Antrag unentgeltlich Auskunft zu erhalten über die personenbezogenen Daten, die über ihn gespeichert wurden. Zusätzlich hat der Nutzer das Recht auf Berichtigung unrichtiger Daten, Sperrung und Löschung seiner personenbezogenen Daten, soweit dem keine gesetzliche Aufbewahrungspflicht entgegensteht.</p><p class="text-warning"><a href="https://datenschutz-generator.de/"><h5>Erstellt mit Datenschutz-Generator.de von RA Dr. Thomas Schwenke</h5></a></p>
 
+            </section>
+            <!--Section: About-->
+        </div>
+    </main>
+<!--Main layout-->
             </li>
         </ul>
     </div>
 </div>
-
-
 <!--/.Mask-->
 
 </header>
