--- a/imprint.html
+++ b/imprint.html
@@ -68,36 +68,8 @@
     <main class="text-center">
         <div class="container">
 
-            <!--Section: About-->
-            <section id="about" class="text-center">
 			<h1 class="h1-responsive ersterartikel">Impressum</h1>
 
-
-
-
-        <ul>
-            <ul class="list-unstyled">
-                <li class="mb-4"><i class="fa fa-2x mb-3 fa-address-book-o"></i>
-                    <p class="text-warning">Brigitte George-Neikes</p>
-                    <p class="text-warning">Josef-Werres-Straße 78</p>
-                    <p class="text-warning">40668 Meerbusch</p>
-                </li>
-                <li class="mb-4"><i class="fa fa-2x mb-3 fa-phone"></i>
-                    <p class="text-warning">+49 (0)2159 - 51143</p>
-                    <p class="text-warning">+49 (0)179 - 6084649</p>
-                </li>
-                <li class="mb-4"><i class="fa fa-2x mb-3 fa-envelope"></i>
-                    <p class="text-warning">ferienhaus.28.am.silbersee@gmail.com</p>
-                </li>
-                <li class="mb-4"><i class="fa fa-2x mb-3 fa-edit"></i>
-                    <p class="text-warning">Julia Neikes,  Adresse wie oben</p>
-                </li>
-            </ul>
-        </ul>
-
-
-            </section>
-            <!--Section: About-->
         </div>
     </main>
 <!--Main layout-->
@@ -115,7 +87,36 @@
 
 <!--Main layout-->
 <main>
+ <main class="text-center">
+        <div class="container">
 
+            <!--Section: About-->
+            <section id="about" class="text-center">
+        <ul>
+            <ul class="list-unstyled">
+                <li class="mb-4"><i class="fa fa-2x mb-3 fa-address-book-o"></i>
+                    <p >Brigitte George-Neikes</p>
+                    <p >Josef-Werres-Straße 78</p>
+                    <p >40668 Meerbusch</p>
+                </li>
+                <li class="mb-4"><i class="fa fa-2x mb-3 fa-phone"></i>
+                    <p >+49 (0)2159 - 51143</p>
+                    <p >+49 (0)179 - 6084649</p>
+                </li>
+                <li class="mb-4"><i class="fa fa-2x mb-3 fa-envelope"></i>
+                    <p >ferienhaus.28.am.silbersee@gmail.com</p>
+                </li>
+                <li class="mb-4"><i class="fa fa-2x mb-3 fa-edit"></i>
+                    <p >Julia Neikes,  Adresse wie oben</p>
+                </li>
+            </ul>
+        </ul>
+
+
+            </section>
+            <!--Section: About-->
+        </div>
+    </main>
 </main>
 <!--Main layout-->
 
